* Changed code workflow to NOT set start date automatically on creation and modification of lessons.  You can now set and unset both start and end dates.
* Updated all jsp pages to use the new Blackboard presentation tags (Using bbNG instead of bbData and bbUI)
* Updated and increased level of code comments in jsp pages for future maintenance
* Deleted all unused jsp pages.

1.2.0 Release Fixes
===================
* LDEV-2896 Improved lesson creation page and added gradebook support
* LDEV-2898 Added option to refresh the YUI tree
* LDEV-2911 Fixed JS exceptions with IE: sequence_id, window.addEventListener, Doctypes
* LDEV-2897 Fixed Blackboard gradebook error (occured on Assessment tool outputs)
* LDEV-2896 Added support for lessons created in LAMS building block version prior to 1.2. Also if there is no title or description don't display them

1.2.1 Release Fixes
===================
* LDEV-3034 Remove "External Page" warning introduced in BB (BB9.1 SP12)

1.2.2 Release Fixes
===================
* LDEV-3102 Remove user call back URLs from Blackboard integration 
* LDEV-3143 Create an option to opt out from Gradecenter column

1.2.3 Release Fixes
===================
* LDEV-3176 Fix wrong URL format for starting LAMS lesson
* LDEV-2790 Use html editor for lesson description

1.2.4 Release Fixes
===================
* LDEV-3180 Load LAMS sequences on demand 
* LDEV-3217 encoding emails before sending them to LAMS 

1.2.5 Release Fixes
===================
* LDEV-3285: include lessonid in integration hash 

1.2.6 Release Fixes
===================
* LDEV-3382: Add datetime parameter check to LoginRequest

1.2.7 Release Fixes
===================
* LDEV-3402: Add "your progress" widget to the lesson page

1.2.8 Release Fixes
===================
* LDEV-3423: Fixed Exception on getting mark from LAMS server after lesson is completed
* LDEV-3424: Add new feature to integrations to be able to sync all marks in the lesson
