@@ -73,4 +73,5 @@ https://bugs.lamsfoundation.org/browse/<bug reference>
 ===================
 * LDEV-3423: Fixed Exception on getting mark from LAMS server after lesson is completed
 * LDEV-3424: Add new feature to integrations to be able to sync all marks in the lesson
+* LDEV-3446: Join users to the lesson after it was created on a BB side
 
